dev: Using String#formatted