@@ -28,8 +28,7 @@ public class BasicPagination<T> implements Pagination<T> {
    */
   public BasicPagination(final int elementsPerPage) {
     if (elementsPerPage <= 0) {
-      throw new IllegalArgumentException(
-        String.format("Can't build a BasicPagination with this elementsPerPage int{%d}.", elementsPerPage));
+      throw new IllegalArgumentException("Can't build a BasicPagination with this elementsPerPage int{%d}.".formatted(elementsPerPage));
     }
     this.elementsPerPage = elementsPerPage;
   }
